--- a/TODO
+++ b/TODO
@@ -1,6 +1,8 @@
 TODO: 
 
-1) update code that creates/starts/stops/destroy media streams
+1) update code that creates/starts/stops/destroy media streams: DONE.
+
+1a) must review code that generates response call->media and response SDP: for each media offered we need to provide a m= line in the same order as the offered but the ones that were refused must have port set to zero. Also we might need to reorder elements from the media in the call_response json (but basically we need to remove medias from a response bag as the offer is processed).
 
 2) if 'media: []' or 'media: null' it means there is no media, so do not generate a body (content-length: 0)
 
