--- a/TODO
+++ b/TODO
@@ -6,11 +6,38 @@ TODO:
 
 Draft:
   - when we process call_create (no matter if delayed_media is on or off) or call_respond with 183/2XX, we should generate the local sdp and send it or set it or save it in a field in struct Call
-  - the call->media_ng should be deprecated.
+  - the call->media_neg should be deprecated.
   - instead we will create the media endpoints at call->media directly
   - when process on_media_update, we should iterate over the local active sdp and search for each element in call->media and remove the ones that were not accepted (port=0) and add the ones that are not present yet.
 
-  - after changes are done and confirmed to work, we should update the code to use pjmedia_sdp_session_cmp to check the active_local_sdp and active_remote_sdp (new fields in struct Call) to first check if there were media changes. if not, we can return from on_media_update without generating a media_update event as there were no changes. If there were changes we should check with pjmedia_sdp_media_cmp and only restart media endpoints for the ones that changed.
+Draft2:
+struct Call:
+    pjmedia_sdp_session *local_sdp;
+
+    pjmedia_sdp_session *active_local_sdp;
+    pjmedia_sdp_session *active_remote_sdp;
+
+call_create:
+  - update_media_from_json
+  - create local_sdp from media
+  - store call->local_sdp
+  - set offer with call->local_sdp if delayed_media=false
+
+call_respond (183 or 2XX):
+  - update_media_from_json
+  - create local_sdp from media
+  - store call->local_sdp
+  
+on_rx_offer2 (might be called due INVITE or '200 OK' in case of delayed_media):
+  - set local_sdp as answer
+  
+on_media_update:
+  - check active_local_sdp and active_remote_sdp (exit with PJ_SUCCESS if they didn't change)
+  - update_media_from_active_local_sdp
+  - iterate active_local_sdp and restart/remove each media if necessary
+
+
+1b) after changes are done and confirmed to work, we should update the code to use pjmedia_sdp_session_cmp to check the active_local_sdp and active_remote_sdp (new fields in struct Call) to first check if there were media changes. if not, we can return from on_media_update without generating a media_update event as there were no changes. If there were changes we should check with pjmedia_sdp_media_cmp and only restart media endpoints for the ones that changed.
 
 2) if 'media: []' or 'media: null' it means there is no media, so do not generate a body (content-length: 0)
 
