--- a/TODO
+++ b/TODO
@@ -61,10 +61,20 @@ Then when on_media_update happens, we should compare them with the new active lo
 
 1c) need to allow hold parameter to each media independently (if parameter hold is absent on a media, the value of the parameter hold in the json options will be used (default is false).
 
+1d) the function:
 
-1d) after changes are done and confirmed to work, we should update the code to use pjmedia_sdp_session_cmp to check the active_local_sdp and active_remote_sdp (new fields in struct Call) to first check if there were media changes. if not, we can return from on_media_update without generating a media_update event as there were no changes. If there were changes we should check with pjmedia_sdp_media_cmp and only restart media endpoints for the ones that changed.
+    MediaEndpoint *find_media_by_json_descr(Call *call, Value &descr, bool in_use_chart[]) {
+        // TODO
+        return NULL;
+    }
 
-1e) write tests for:
+is not implemented (but it is being called) but this seems to not cause problems. Need to check.
+
+1e) it seems ddd.js and dddd.js frequently crash
+
+1f) after changes are done and confirmed to work, we should update the code to use pjmedia_sdp_session_cmp to check the active_local_sdp and active_remote_sdp (new fields in struct Call) to first check if there were media changes. if not, we can return from on_media_update without generating a media_update event as there were no changes. If there were changes we should check with pjmedia_sdp_media_cmp and only restart media endpoints for the ones that changed.
+
+1g) write tests for:
   - media position change. Ex:
       INVITE: [{type: 'mcrp'},{type: 'audio'}]
       200 OK: [{type: 'audio'},{type: 'mrcp'}]
